--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "swiper": "^11.1.15",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
